..and the NEWS update.
(Old svn revision: 25725)

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 4.5.x
 =====
+- Make sure tooltips are set for more than 1 clock instance (bug #3109).
+  (Jasper)
 - Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
   Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
 - Completely rewritten launcher (Bugs 2336, 2365, 1323, 2262 and 1225)
