--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-23 9:44 nick
+
+	* libxfce4panel/libxfce4panel-1.0.pc.in: Restore directories in the pc file.
+
+
 2007-05-22 20:34 nick
 
 	* plugins/launcher/launcher-dialog.c: Always update the panel icon when dropping
