* panel/panel-item-manager.c, NEWS: Fix loading internal plugins 	if a similar file exists in the start directory (Bug #3279).
(Old svn revision: 25755)

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ NEWS for xfce4-panel
   (Jasper)
 - Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
   Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
+- Fix loading internal plugins if a similar file exists in the start directory
+  (Bug #3279). (Nick)
 
 4.4.1
 =====
