--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,9 @@
-2007-04-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-06-09  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_BR.po: Updated the Brazilian Portuguese translation
+	by Pablo Lerina <pabloalr@gmail.com>
+
+2007-04-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Updated the French translation
 
@@ -10,12 +15,12 @@
 
 	* uk.po: Updated Ukrainian translation.
 
-2007-04-01  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-04-01  Maximilian Schleiss <maximilian@xfce.org>
 
 	* zh_CN.po: Updated the simplified Chinese translation
 	by Wu Li <wurisky@gmail.com>
 
-2007-03-30  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-30  Maximilian Schleiss <maximilian@xfce.org>
 
 	* zh_CN.po: Updated the simplified Chinese translation
 	by Wu Li <wurisky@gmail.com>
@@ -24,7 +29,7 @@
 
 	* tr.po: Updated the Turkish translation.
 
-2007-03-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-28  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Minor fixes to the German translation
 	by Nico Schümann <nico@prog.nico22.de>
@@ -36,7 +41,7 @@
 	* gl.po: Fixed header.
 	* mk.po: Removed executable attribute.
 
-2007-03-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Updated the German translation
 	by Nico Schümann <nico@prog.nico22.de>
@@ -59,7 +64,7 @@
 
 	* uk.po: Update Ukrainian translation.
 
-2007-02-10  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-10  Maximilian Schleiss <maximilian@xfce.org>
 
 	* Modified LINGUAS files to include Albanian language,
 	verified all the LINGUAS files.
@@ -69,23 +74,23 @@
 	* ar.po: initial commit.
 	* LINGUAS: adding ar language code
 
-2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed accelerators.
 	* zh_CN.po: Updated the Chinese (Simplified) translation by
 	Wu Li <wurisky@gmail.com>
 
-2007-01-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* sq.po: Added the Albanian translation by
 	Besnik Bleta <besnik@programeshqip.org>
 
-2007-01-21  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-21  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ro.po: Updated the Romanian translation by
 	Mişu Moldovan <dumol@gnome.ro>
 
-2007-01-19  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-19  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Updated the Polish translation by
 	Szymon Kałasz <szymon_maestro@gazeta.pl>
@@ -98,17 +103,17 @@
 
 	* be.po: Updated Belarusian Translation
 
-2007-01-09  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-09  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ca.po: Updated the Catalan translation by
 	Ivà Burgos <debian.public@gmail.com>
 
-2007-01-05  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-05  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Updated the German translation by
 	Fabian Nowak <timystery@arcor.de>
 
-2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* mk.po: Added the Macedonian translation by
 	Jovan Naumovski <jovan@lugola.net>
@@ -117,7 +122,7 @@
 
 	* ca.po: little updated to Catalan translation
 
-2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ru.po: Updated the Russian translation by
 	Andrey Fedoseev <andrey.fedoseev@gmail.com>
@@ -134,12 +139,12 @@
 	* cs.po: Updated Czech translations
 	by Michal Varady <miko.vaji@gmail.com>
 
-2006-12-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ca.po: Updated the Catalan translation by
 	Carles Muñoz Gorriz <carlesmu@internautas.org>
 
-2006-11-15  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-11-15  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Updated the Spanish translation
 	by Rudy Godoy <rudy@stone-head.org>
@@ -165,7 +170,7 @@
 	* de.po: Updated German translations by Ronny Steiner
 	<sir.steiner@gmx.de>
 	* fr.po: Updated French translations by Maximilian Schleiss
-	<maxschleiss@bluewin.ch>
+	<maximilian@xfce.org>
 
 2006-09-22  Sylvain Vedrenne <gnu_sylvain@xfce.org>
 
@@ -266,7 +271,7 @@
 2006-06-04  Jean-François Wauthy <pollux@xfce.org>
 
 	* fr.po : Updated French translations by Maximilian Schleiss
-	<maxschleiss@bluewin.ch>
+	<maximilian@xfce.org>
 
 2006-06-03  Alexander Toresson <alexander.toresson@gmail.com>
 
