--- a/po/fr.po
+++ b/po/fr.po
@@ -1,9 +1,9 @@
 # French translation of the xfce4-panel package.
-# Copyright (C) 2002-2006 The Xfce development team.
+# Copyright (C) 2002-2007 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Olivier Fourdan <fourdan@xfce.org>, 2004.
 # Collet Etienne <xanaxlnx@gmail.com>, 2005.
-# Maximilian Schleiss <maxschleiss@solnet.ch>, 2006, 2007.
+# Maximilian Schleiss <maximilian@xfce.org>, 2006, 2007.
 #
 msgid ""
 msgstr ""
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 16:30+0200\n"
 "PO-Revision-Date: 2007-04-03 15:48+0100\n"
-"Last-Translator: Maximilian Schleiss <maxschleiss@solnet.ch>\n"
+"Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
