--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,9 +1,9 @@
-2007-05-13  Maximilian Schleiss <maxschleiss@solnet.ch>
+2007-05-13  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb_NO.po: Updated the Norwegian Bokmal translation
 	by Terje Uriansrud <ter@operamail.com>
 
-2007-05-07  Maximilian Schleiss <maxschleiss@solnet.ch>
+2007-05-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* it.po: Updated the Italian translation
 	by Fabio Riga <usul@aruba.it>
@@ -12,17 +12,17 @@
 
 	* ca.po: Update Catalan translations
 
-2007-04-03  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-04-03  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Small fixes to the Polish translation
 	by Piotr Maliński <riklaunim@gmail.com>
 
-2007-04-01  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-04-01  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Small fixes to the Polish translation
 	by Piotr Maliński <riklaunim@gmail.com>
 
-2007-03-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-28  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Minor fixes to the German translation
 	by Nico Schümann <nico@prog.nico22.de>
@@ -37,7 +37,7 @@
 	* gl.po: Fixed header.
 	* mk.po: Removed executable attribute.
 
-2007-03-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-03-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* en_GB.po: Added the British English translation
 	by Jeff Bailes <thepizzaking@gmail.com>
@@ -55,23 +55,23 @@
 
 	* uk.po: Update Ukrainian translation.
 
-2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-02-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed accelerators.
 	* zh_CN.po: Updated the Chinese (Simplified) translation by
 	Wu Li <wurisky@gmail.com>
 
-2007-01-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-24  Maximilian Schleiss <maximilian@xfce.org>
 
 	* sq.po: Added the Albanian translation by
 	Besnik Bleta <besnik@programeshqip.org>
 
-2007-01-21  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-21  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ro.po: Updated the Romanian translation by
 	Mişu Moldovan <dumol@gnome.ro>
 
-2007-01-19  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-19  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Updated the Polish translation by
 	Szymon Kałasz <szymon_maestro@gazeta.pl>
@@ -84,17 +84,17 @@
 
 	* be.po: Updated Belarusian Translation
 
-2007-01-09  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-09  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ca.po: Updated the Catalan translation by
 	Ivà Burgos <debian.public@gmail.com>
 
-2007-01-05  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2007-01-05  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: Updated the German translation by
 	Fabian Nowak <timystery@arcor.de>
 
-2006-12-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* mk.po: Added the Macedonian translation by
 	Jovan Naumovski <jovan@lugola.net>
@@ -103,7 +103,7 @@
 
 	* ca.po: little updated to Catalan translation
 
-2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ru.po: Updated the Russian translation by
 	Andrey Fedoseev <andrey.fedoseev@gmail.com>
@@ -120,12 +120,12 @@
 	* cs.po: Updated Czech translations
 	by Michal Varady <miko.vaji@gmail.com>
 
-2006-12-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-12-11  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ca.po: Updated the Catalan translation by
 	Carles Muñoz Gorriz <carlesmu@internautas.org>
 
-2006-11-15  Maximilian Schleiss <maxschleiss@bluewin.ch>
+2006-11-15  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Updated the Spanish translation
 	by Rudy Godoy <rudy@stone-head.org>
@@ -151,7 +151,7 @@
 	* de.po: Updated German translations by Ronny Steiner
 	<sir.steiner@gmx.de>
 	* fr.po: Updated French translations by Maximilian Schleiss
-	<maxschleiss@bluewin.ch>
+	<maximilian@xfce.org>
 
 2006-09-22  Sylvain Vedrenne <gnu_sylvain@xfce.org>
 
@@ -252,7 +252,7 @@
 2006-06-04  Jean-François Wauthy <pollux@xfce.org>
 
 	* fr.po : Updated French translations by Maximilian Schleiss
-	<maxschleiss@bluewin.ch>
+	<maximilian@xfce.org>
 
 2006-06-03  Alexander Toresson <alexander.toresson@gmail.com>
 
