--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-29  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pt_PT.po: European Portuguese translation update
+	by Nuno Miguel <nunis@netcabo.pt>
+
 2007-06-09  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_BR.po: Updated the Brazilian Portuguese translation
