updating for Punjabi
(Old svn revision: 25887)

--- a/po/pa.po
+++ b/po/pa.po
@@ -5,14 +5,15 @@
 #
 # Amanpreet Singh Alam <aalam@redhat.com>, 2004.
 # A S Alam <apbrar@gmail.com>, 2006.
+# A S Alam <aalam@users.sf.net>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.4.0\n"
+"Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 16:30+0200\n"
-"PO-Revision-Date: 2006-12-22 21:35+0530\n"
-"Last-Translator: A S Alam <apbrar@gmail.com>\n"
-"Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
+"PO-Revision-Date: 2007-07-05 07:24+0530\n"
+"Last-Translator: A S Alam <aalam@users.sf.net>\n"
+"Language-Team: Punjabi <punjabi-l10n@lists.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -64,9 +65,8 @@ msgid "Remove \"%s\"?"
 msgstr "ਕੀ \"%s\" ਹਟਾਉਣਾ ਹੈ?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:608
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
-msgstr "ਆਈਟਮ ਪੈਨਲ 'ਚੋਂ ਹਟਾਈ ਜਾਵੇਗੀ ਅਤੇ ਇਸ ਦੀ ਸੰਰਚਨਾ ਖਤਮ ਹੋ ਜਾਵੇਗੀ।"
+msgid "The item will be removed from the panel and its configuration will be lost."
+msgstr "ਆਈਟਮ ਪੈਨਲ 'ਚੋਂ ਹਟਾਈ ਜਾਵੇਗੀ ਅਤੇ ਇਸ ਦੀ ਕੰਨਫੀਗਰੇਸ਼ਨ ਖਤਮ ਹੋ ਜਾਵੇਗੀ।"
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:823
@@ -107,7 +107,7 @@ msgstr "ਬੰਦ ਕਰੋ"
 
 #: ../panel/panel.c:733
 msgid "Restart"
-msgstr "ਮੁੜ-ਚਾਲੂ"
+msgstr "ਰੀਸਟਾਰਟ"
 
 #: ../panel/panel.c:747
 msgid "About the Xfce Panel"
@@ -136,65 +136,61 @@ msgstr "ਚੁਣਿਆ ਪੈਨਲ ਅਤੇ ਇਸ ਦੀਆਂ ਸਭ ਆਈ
 
 #: ../panel/panel-app.c:965 ../panel/panel-app.c:966
 msgid "Developer"
-msgstr "ਡੀਵੈਲਪਰ"
+msgstr "ਡਿਵੈਲਪਰ"
 
 #: ../panel/main.c:60
 msgid "Show this message and exit"
-msgstr ""
+msgstr "ਇਹ ਮੈਸਜ਼ ਵੇਖਾਓ ਅਤੇ ਬੰਦ ਕਰੋ"
 
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show configuration dialog"
-msgstr "ਨੋਟੀਫਿਕੇਸ਼ਨ ਆਈਕਾਨ ਵੇਖਾਓ"
+msgstr "ਕੰਨਫੀਗਰੇਸ਼ਨ ਡਾਈਲਾਗ ਵੇਖਾਓ"
 
 #: ../panel/main.c:62
 msgid "Save configuration"
-msgstr ""
+msgstr "ਕੰਨਫੀਗਰੇਸ਼ਨ ਸੰਭਾਲੋ"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart panels"
-msgstr "ਮੁੜ-ਚਾਲੂ"
+msgstr "ਪੈਨਲ ਰੀਸਟਾਰਟ ਕਰੋ"
 
 #: ../panel/main.c:64
 msgid "End the session"
-msgstr ""
+msgstr "ਸ਼ੈਸ਼ਨ ਖਤਮ ਕਰੋ"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
-msgstr ""
+msgstr "ਸਭ ਪੈਨਲ ਬੰਦ ਕਰੋ ਅਤੇ ਪਰੋਗਰਾਮ ਖਤਮ ਕਰੋ"
 
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Add new items"
-msgstr "ਨਵੀਂ ਆਈਟਮ ਸ਼ਾਮਿਲ"
+msgstr "ਨਵੀਂਆਂ ਆਈਟਮਾਂ ਸ਼ਾਮਿਲ"
 
 #: ../panel/main.c:89
-#, fuzzy
 msgid "Failed to open display"
-msgstr "\"%s\" ਨੂੰ ਚਲਾਇਆ ਨਹੀਂ ਜਾ ਸਕਿਆ"
+msgstr "ਡਿਸਪਲੇਅ ਖੋਲ੍ਹਣ ਲਈ ਫੇਲ੍ਹ"
 
 #: ../panel/main.c:101
 msgid "Copyright (c) 2004-2007"
-msgstr ""
+msgstr "ਕਾਪੀਰਾਈਟ (c) 2004-2007"
 
 #: ../panel/main.c:102
 msgid "The Xfce development team. All rights reserved."
-msgstr ""
+msgstr "Xfce ਡਿਵੈਲਪਮਿੰਟ ਟੀਮ। ਸਭ ਹੱਕ ਰਾਖਵੇਂ ਹਨ।"
 
 #: ../panel/main.c:103
 #, c-format
 msgid "Please report bugs to <%s>."
-msgstr ""
+msgstr "ਬੱਗ ਦੀ ਜਾਣਕਾਰੀ <%s> ਉੱਤੇ ਦਿਓ ਜੀ।"
 
 #: ../panel/main.c:147
 msgid "xfce4-panel already running"
-msgstr ""
+msgstr "xfce4-panel ਪਹਿਲਾਂ ਹੀ ਚੱਲ ਰਿਹਾ ਹੈ"
 
 #. restart
 #: ../panel/main.c:158
 msgid "Restarting xfce4-panel..."
-msgstr ""
+msgstr "xfce4-panel ਰੀਸਟਾਰਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ..."
 
 #: ../panel/panel-dialogs.c:188
 #, c-format
@@ -224,14 +220,12 @@ msgid "Full Width"
 msgstr "ਪੂਰੀ ਚੌੜਾਈ"
 
 #: ../panel/panel-dialogs.c:912 ../panel/panel-dialogs.c:1148
-#, fuzzy
 msgid "Normal Height"
-msgstr "ਸਧਾਰਨ ਚੌੜਾਈ"
+msgstr "ਸਧਾਰਨ ਉਚਾਈ"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1149
-#, fuzzy
 msgid "Full Height"
-msgstr "ਪੂਰੀ ਚੌੜਾਈ"
+msgstr "ਪੂਰੀ ਉਚਾਈ"
 
 #: ../panel/panel-dialogs.c:921 ../panel/panel-dialogs.c:1158
 msgid "Span Monitors"
@@ -318,13 +312,12 @@ msgid "Make active panel opaque"
 msgstr "ਸਰਗਰਮ ਪੈਨਲ ਅਲਪ-ਪਾਰਦਰਸ਼ੀ ਬਣਾਓ"
 
 #: ../panel/panel-dialogs.c:1509
-#, fuzzy
 msgid "Popup position:"
-msgstr "ਸਥਿਤੀ"
+msgstr "ਪੋਪਅੱਪ ਸਥਿਤੀ:"
 
 #: ../panel/panel-dialogs.c:1519
 msgid "Automatic"
-msgstr ""
+msgstr "ਆਟੋਮੈਟਿਕ"
 
 #: ../panel/panel-dialogs.c:1563 ../panel/panel-dialogs.c:1599
 #: ../panel/panel-dialogs.c:1623
@@ -435,81 +428,75 @@ msgid "New Item"
 msgstr "ਨਵੀਂ ਆਈਟਮ"
 
 #: ../plugins/launcher/launcher-exec.c:487
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch \"%s\""
-msgstr "\"%s\" ਨੂੰ ਚਲਾਇਆ ਨਹੀਂ ਜਾ ਸਕਿਆ"
+msgstr "\"%s\" ਲਾਂਚ ਕਰਨ ਲਈ ਫੇਲ੍ਹ"
 
 #: ../plugins/launcher/launcher-dialog.c:577
 msgid "No icon"
-msgstr ""
+msgstr "ਆਈਕਾਨ ਨਹੀਂ"
 
 #: ../plugins/launcher/launcher-dialog.c:597
-#, fuzzy
 msgid "Select a Directory"
-msgstr "ਮਾਨੀਟਰ ਚੁਣੋ"
+msgstr "ਇੱਕ ਡਾਇਰੈਕਟਰੀ ਚੁਣੋ"
 
 #: ../plugins/launcher/launcher-dialog.c:641
-#, fuzzy
 msgid "Select an Application"
-msgstr "ਕਾਰਵਾਈ ਕਿਸਮ ਚੁਣੋ:"
+msgstr "ਇੱਕ ਕਾਰਜ ਚੁਣੋ"
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
-msgstr ""
+msgstr "ਸਭ ਫਾਇਲਾਂ"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
-msgstr ""
+msgstr "ਐਕਜ਼ੀਕਿਊਟਿਵ ਫਾਇਲਾਂ"
 
 #: ../plugins/launcher/launcher-dialog.c:671
 msgid "Perl Scripts"
-msgstr ""
+msgstr "ਪਰਲ ਸਕ੍ਰਿਪਟਾਂ"
 
 #: ../plugins/launcher/launcher-dialog.c:677
 msgid "Python Scripts"
-msgstr ""
+msgstr "ਪਾਈਥਨ ਸਕ੍ਰਿਪਟਾਂ"
 
 #: ../plugins/launcher/launcher-dialog.c:683
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "ਰੂਬੀ ਸਕ੍ਰਿਪਟਾਂ"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Shell Scripts"
-msgstr ""
+msgstr "ਸ਼ੈਲ ਸਕ੍ਰਿਪਟਾਂ"
 
 #: ../plugins/launcher/launcher-dialog.c:760
 msgid "Unknown"
-msgstr ""
+msgstr "ਅਣਜਾਣ"
 
 #. allocate the chooser dialog
 #: ../plugins/launcher/launcher-dialog.c:763
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr ""
+msgstr "\"%s\" ਲਈ ਆਈਕਾਨ ਚੁਣੋ"
 
 #: ../plugins/launcher/launcher-dialog.c:1101
-#, fuzzy
 msgid "_Name"
-msgstr "ਨਾਂ"
+msgstr "ਨਾਂ(_N)"
 
 #: ../plugins/launcher/launcher-dialog.c:1119
-#, fuzzy
 msgid "_Description"
-msgstr "ਵੇਰਵਾ"
+msgstr "ਵੇਰਵਾ(_D)"
 
 #: ../plugins/launcher/launcher-dialog.c:1138
-#, fuzzy
 msgid "_Icon"
-msgstr "ਆਈਕਾਨ ਬਕਸਾ"
+msgstr "ਆਈਕਾਨ(_I)"
 
 #: ../plugins/launcher/launcher-dialog.c:1156
-#, fuzzy
 msgid "Co_mmand"
-msgstr "ਕਮਾਂਡ"
+msgstr "ਕਮਾਂਡ(_m)"
 
 #: ../plugins/launcher/launcher-dialog.c:1183
 msgid "_Working Directory"
-msgstr ""
+msgstr "ਵਰਕਿੰਗ ਡਾਇਰੈਕਟਰੀ(_W)"
 
 #: ../plugins/launcher/launcher-dialog.c:1215
 msgid "Run in _terminal"
@@ -590,9 +577,8 @@ msgid "Use flat buttons"
 msgstr "ਸਮਤਲ ਬਟਨ ਵਰਤੋਂ"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:215
-#, fuzzy
 msgid "Show handle"
-msgstr "ਫਰੇਮ ਵੇਖਾਓ(_f)"
+msgstr "ਹੈਂਡਲ ਵੇਖਾਓ"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:227
 msgid "Show tasks from _all workspaces"
@@ -697,7 +683,7 @@ msgstr "ਵਰਕਸਪੇਸ ਕਾਰਵਾਈਆਂ ਵੇਖਾਓ(_k)"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
-msgstr ""
+msgstr "'xfce4-panel -c' ਲਾਂਚ ਕਰਨ ਲਈ ਫੇਲ੍ਹ"
 
 #: ../mcs-plugin/plugin.c:57
 msgid "Panel"
@@ -759,135 +745,3 @@ msgstr "ਉਪਲੱਬਧ ਵਿੰਡੋ ਦੀ ਸੂਚੀ ਵੇਖਾਓ"
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 ਪੈਨਲ ਮੈਨੇਜਰ"
 
-#~ msgid ""
-#~ "\n"
-#~ " Xfce Panel %s\n"
-#~ "\n"
-#~ " Part of the Xfce Desktop Environment\n"
-#~ " http://www.xfce.org\n"
-#~ "\n"
-#~ " Licensed under the GNU GPL.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "\n"
-#~ " Xfce ਪੈਨਲ %s\n"
-#~ "\n"
-#~ " Xfce ਡਿਸਕਟਾਪ ਇੰਵਾਰਇਨਮਿੰਟ\n"
-#~ " http://www.xfce.org\n"
-#~ "\n"
-#~ " GNU GPL ਲਾਈਸੈਂਸ ਨਾਲ\n"
-#~ "\n"
-
-#~ msgid ""
-#~ " Usage: %s [OPTIONS]\n"
-#~ "\n"
-#~ msgstr ""
-#~ " ਵਰਤੋਂ: %s [OPTIONS]\n"
-#~ "\n"
-
-#~ msgid ""
-#~ " OPTIONS\n"
-#~ " -h, --help      Show this message and exit\n"
-#~ " -v, --version   Show this message and exit\n"
-#~ " -c, --customize Show configuration dialog\n"
-#~ " -s, --save      Save configuration\n"
-#~ " -r, --restart   Restart panels\n"
-#~ " -q, --quit      End the session\n"
-#~ " -x, --exit      Close all panels and end the program\n"
-#~ " -a, --add       Add new items\n"
-#~ "\n"
-#~ msgstr ""
-#~ " OPTIONS\n"
-#~ " -h, --help      Show this message and exit\n"
-#~ " -v, --version   Show this message and exit\n"
-#~ " -c, --customize Show configuration dialog\n"
-#~ " -s, --save      Save configuration\n"
-#~ " -r, --restart   Restart panels\n"
-#~ " -q, --quit      End the session\n"
-#~ " -x, --exit      Close all panels and end the program\n"
-#~ " -a, --add       Add new items\n"
-#~ "\n"
-
-#~ msgid "Error in command \"%s\""
-#~ msgstr "ਕਮਾਂਡ \"%s\" 'ਚ ਗਲਤੀ"
-
-#~ msgid "This item has not yet been configured"
-#~ msgstr "ਇਹ ਆਈਟਮ ਹਾਲੇ ਸੰਰਚਿਤ ਨਹੀਂ ਹੈ"
-
-#~ msgid "Default"
-#~ msgstr "ਮੂਲ"
-
-#~ msgid "File management"
-#~ msgstr "ਫਾਇਲ ਮੈਨੇਜ਼ਮਿੰਟ"
-
-#~ msgid "Utilities"
-#~ msgstr "ਸਹੂਲਤਾਂ"
-
-#~ msgid "Games"
-#~ msgstr "ਖੇਡਾਂ"
-
-#~ msgid "Help browser"
-#~ msgstr "ਸਹਾਇਤਾ ਬਰਾਊਜ਼ਰ"
-
-#~ msgid "Multimedia"
-#~ msgstr "ਮਲਟੀਮੀਡਿਆ"
-
-#~ msgid "Network"
-#~ msgstr "ਨੈੱਟਵਰਕ"
-
-#~ msgid "Graphics"
-#~ msgstr "ਚਿੱਤਰਕਾਰੀ"
-
-#~ msgid "Printer"
-#~ msgstr "ਪਰਿੰਟਰ"
-
-#~ msgid "Productivity"
-#~ msgstr "ਪ੍ਰੋਡਕਸ਼ਨ"
-
-#~ msgid "Office"
-#~ msgstr "ਦਫ਼ਤਰ"
-
-#~ msgid "Sound"
-#~ msgstr "ਆਵਾਜ਼"
-
-#~ msgid "Terminal"
-#~ msgstr "ਟਰਮੀਨਲ"
-
-#~ msgid "Development"
-#~ msgstr "ਡੀਵੈਲਪਮਿੰਟ"
-
-#~ msgid "Select image file"
-#~ msgstr "ਚਿੱਤਰ ਫਾਇਲ ਚੁਣੋ"
-
-#~ msgid "Select command"
-#~ msgstr "ਕਮਾਂਡ ਚੁਣੋ"
-
-#~ msgid "Other..."
-#~ msgstr "ਹੋਰ..."
-
-#~ msgid ""
-#~ "The first item in the list is shown on the panel. Additional items will "
-#~ "appear in a menu."
-#~ msgstr "ਪੈਨਲ ਉੱਤੇ ਸੂਚੀ ਵਿੱਚ ਪਹਿਲੀਂ ਆਈਟਮ ਵੇਖਾਈ ਜਾਂਦੀ ਹੈ। ਹੋਰ ਆਈਟਮਾਂ ਇੱਕ ਮੇਨੂ ਵਿੱਚ ਦਿੱਸਣਗੀਆਂ।"
-
-#~ msgid ""
-#~ "Failed to run 0launch:\n"
-#~ "%s\n"
-#~ "\n"
-#~ "For help using Zero Install, see http://0install.net"
-#~ msgstr ""
-#~ "0launch ਚਲਾਉਣ ਲਈ ਫੇਲ੍ਹ:\n"
-#~ "%s\n"
-#~ "\n"
-#~ "Zero ਇੰਸਟਾਲ ਦੀ ਵਰਤੋਂ ਬਾਰੇ ਸਹਾਇਤਾ ਲਈ, http://0install.net ਵੇਖੋ।"
-
-#~ msgid ""
-#~ "The Zero Install GUI has finished, but the launcher dialog has "
-#~ "disappeared in the meantime. Not adding launcher (but any files "
-#~ "downloaded have not been lost)."
-#~ msgstr ""
-#~ "ਜ਼ੀਰੋ ਇੰਸਟਾਲ GUI ਮੁਕੰਮਲ ਹੋ ਗਿਆ ਹੈ, ਪਰ ਲਾਂਚਰ ਡਾਈਲਾਗ ਕਿਤੇ ਗੁੰਮ ਹੋ ਗਿਆ ਹੈ। ਲਾਂਚਰ ਨਹੀਂ ਜੋੜਿਆ "
-#~ "ਜਾ ਰਿਹਾ ਹੈ (ਪਰ ਕੋਈ ਡਾਊਨਲੋਡ ਕੀਤੀ ਫਾਇਲ ਨਹੀਂ ਗੁਆਚੀ ਹੈ)।"
-
-#~ msgid "Select file"
-#~ msgstr "ਫਾਇਲ ਚੁਣੋ"
