* plugins/launcher/launcher-exec.c: Define WAIT_ANY if it's not 	  loading (and yes this might break internal plugins, but the plugin's
(Old svn revision: 25890)

--- a/NEWS
+++ b/NEWS
@@ -4,8 +4,7 @@
   (Jasper)
 - Separator can have different styles: space, expanded space, line (default),
   handle and old-style dotted handle. Initial patch by Landry Breuil. (Jasper)
-- Make sure tooltips are set for more than 1 clock instance (bug #3109).
-  (Jasper)
+- Complete rewrite of the clock plugin. (Nick)
 - Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
   Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
 - Completely rewritten launcher (Bugs 2336, 2365, 1323, 2262 and 1225)
