--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,9 @@
 NEWS for xfce4-panel
 ====================
+
 4.4.2
 =====
+- Improve MCS plugin code. (Nick)
 - Fix expansion of items a non-full-width panel. (Jasper)
 - Make sure tooltips are set for more than 1 clock instance (bug #3109).
   (Jasper)
@@ -14,6 +16,7 @@ NEWS for xfce4-panel
   of screen updates. (Nick)
 - Fix possible buffer overflow in launcher tooltips (bug #3324). (Jasper)
 
+
 4.4.1
 =====
 - Completely hide the right-click menu when kiosk mode is enabled (Bug #2984). (Nick)
@@ -23,15 +26,16 @@ NEWS for xfce4-panel
 - Improve the icon size of the actions plugin and add an option to change the
   orientation of the buttons (Bug #2999). (Nick)
 - Unhide when dragging over the panel (Bug #2914). (Jasper)
-- Check for NULL pointers in DBG messages to prevent crashes on Solaris, based on 
+- Check for NULL pointers in DBG messages to prevent crashes on Solaris, based on
   patch from William Bonnet (bug #2922). (Jasper)
 - Add some checks for valid tree selection (Bug #2933). (Jasper)
 - Many translation updates. (Xfce Translation Team)
 
+
 4.4.0
 =====
 - Many fixes when using the panel in a multiscreen setup (Jasper, Nick)
-- Update or add blinking for urgent windows in taslist, windowlist and iconbox. 
+- Update or add blinking for urgent windows in taslist, windowlist and iconbox.
   (Jasper)
 - Move test plugin to Xfce Goodies. (Nick)
 - Several fixes for (re)sizing and positioning behavior. (Jasper)
@@ -42,7 +46,7 @@ NEWS for xfce4-panel
 
 4.3.99.2 (4.4-RC2)
 ==================
-- Adjust the plugin system to improve support for other platforms 
+- Adjust the plugin system to improve support for other platforms
   (read: windows). (Jasper, Olivier)
 - Many small fixes. (Jasper, Nick, Olivier, Jean-Francois)
 - Translation updates. (Xfce Translation Team)
@@ -95,7 +99,7 @@ NEWS for xfce4-panel
 - Increase API version, but still support old plugins (Jasper)
 - Use new gtk 2.4 file chooser (Jasper)
 - Improve focus management (in combination with xfwm4) by setting the dock
-  type hint. Panel will now always be on top; the option is gone. 
+  type hint. Panel will now always be on top; the option is gone.
   (Olivier, Jasper)
 - Transparency is always on, but toggled off when the mouse is over the panel
   (Jasper)
@@ -106,7 +110,7 @@ NEWS for xfce4-panel
 - Several translation updates (Jean-Francois)
 - Some autohide fixes with open dialogs (Jasper)
 - Fix multihead support (Jasper)
-- Translucent panel when set on top. Needs xfwm4 with composite support 
+- Translucent panel when set on top. Needs xfwm4 with composite support
   and XOrg >= 6.8.0 with composite extension enabled. (Olivier)
 
 
@@ -114,28 +118,28 @@ NEWS for xfce4-panel
 ==================
 - Use basedir spec to locate config file. (Jasper)
 - Rename xfce4rc to contents.xml. (Jasper)
-- Change the fallback (default) icons to the ones from the Rodent theme 
+- Change the fallback (default) icons to the ones from the Rodent theme
   by Francois, very pretty. (Jasper)
 - Add support for new KIOSK mode. Much better than env variables. (Benedikt)
 - Fix autohide and right-click menu interaction. (Jasper)
 - Icon theme support : no more panel-specific themes, the panel will now
   follow the icon theme set in the user interface dialog. (Jasper)
 - Set partial struts (Jasper)
-- Add multihead support. The user needs to set DISPLAY properly to start a 
+- Add multihead support. The user needs to set DISPLAY properly to start a
   new panel on another screen. (Jasper)
 - Update list of module list when opening dialog: remove uninstalled modules
-  (when not in use) and add newly installed ones. Based on idea of Scott 
+  (when not in use) and add newly installed ones. Based on idea of Scott
   Barron. (Jasper)
 - Use a dialog to add items to the panel, instead of a submenu. (Jasper)
 - Reduce handle width to show only one line of dots. (Jasper)
 - Split out the code for choosing a command and choosing an icon from
-  item_dialog.c. to make it available for use in other dialogs (plugins). 
-  The mailcheck plugin makes use of it and of course the launcher dialog. 
+  item_dialog.c. to make it available for use in other dialogs (plugins).
+  The mailcheck plugin makes use of it and of course the launcher dialog.
   (Jasper)
 - Implement module unloading. Add uniqueness setting to plugins. (Jasper)
 - Add pop3 email checking: Use 'pop3://username:password@host' as mailbox.
   (Olivier)
-- Properly update arrow direction. Use this info to position the menus. 
+- Properly update arrow direction. Use this info to position the menus.
   Much better. (Jasper)
 - Add xrandr awareness. (Jasper)
 - Add xinerama aware smart positioning. (Jasper)
