xfce4-panel Basque translation update
(Old svn revision: 25911)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-13  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update
+
 2007-06-29  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_PT.po: European Portuguese translation update
