--- a/po/ja.po
+++ b/po/ja.po
@@ -1,16 +1,16 @@
 # $Id$
 #
 # Japanese translations for xfce4-panel package.
-# Copyright (C) 2002-2006 The Xfce development team.
+# Copyright (C) 2002-2007 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Daichi Kawahata <daichi@xfce.org>, 2005-2006.
+# Daichi Kawahata <daichi@xfce.org>, 2005-2007.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.4.0\n"
+"Project-Id-Version: xfce4-panel 4.5.0.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-06 21:54+0200\n"
-"PO-Revision-Date: 2006-05-31 21:43+0900\n"
+"POT-Creation-Date: 2007-07-10 20:11+0900\n"
+"PO-Revision-Date: 2007-07-10 20:29+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -18,39 +18,36 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "コマンド"
+msgstr "コマンドプロンプト"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "Xターミナルエミュレーター"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "テキストファイルの編集を行います。"
 
 #: ../config/launcher-8.rc.in.h:2
 msgid "Editor"
 msgstr "エディター"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "ファイル管理"
+msgstr "ファイルマネージャー"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "ファイル・フォルダを管理します。"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "インターネットを閲覧します。"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "ヘルプブラウザー"
+msgstr "ウェブブラウザー"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:169
@@ -141,61 +138,57 @@ msgstr "開発者"
 
 #: ../panel/main.c:60
 msgid "Show this message and exit"
-msgstr ""
+msgstr "このメッセージを表示して終了します"
 
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show configuration dialog"
-msgstr "通知アイコンを表示します。"
+msgstr "設定ウィンドウを表示します"
 
 #: ../panel/main.c:62
 msgid "Save configuration"
-msgstr ""
+msgstr "設定を保存します"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart panels"
-msgstr "再起動"
+msgstr "パネルを再起動します"
 
 #: ../panel/main.c:64
 msgid "End the session"
-msgstr ""
+msgstr "パネルのセッションを終了します"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
-msgstr ""
+msgstr "全てのパネルを閉じてパネルのセッションを終了します"
 
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Add new items"
-msgstr "アイテムを追加"
+msgstr "新規アイテムを追加します"
 
 #: ../panel/main.c:90
-#, fuzzy
 msgid "Failed to open display"
-msgstr "「%s」を実行できませんでした"
+msgstr "ディスプレイを開けませんでした"
 
 #: ../panel/main.c:102
 msgid "Copyright (c) 2004-2007"
-msgstr ""
+msgstr "製作著作 (c) 2004-2007"
 
 #: ../panel/main.c:103
 msgid "The Xfce development team. All rights reserved."
-msgstr ""
+msgstr "The Xfce development team. All rights reserved."
 
 #: ../panel/main.c:104
 #, c-format
 msgid "Please report bugs to <%s>."
-msgstr ""
+msgstr "バグは <%s> までご連絡ください。"
 
 #: ../panel/main.c:148
 msgid "xfce4-panel already running"
-msgstr ""
+msgstr "xfce4-panel は既に実行されています。"
 
 #. restart
 #: ../panel/main.c:160
 msgid "Restarting xfce4-panel..."
-msgstr ""
+msgstr "xfce4-panel を再起動します..."
 
 #: ../panel/panel-dialogs.c:188
 #, c-format
@@ -220,21 +213,19 @@ msgstr "利用可能なアイテム"
 
 #: ../panel/panel-dialogs.c:907 ../panel/panel-dialogs.c:1143
 msgid "Normal Width"
-msgstr "通常幅にする"
+msgstr "通常の横幅にする"
 
 #: ../panel/panel-dialogs.c:908 ../panel/panel-dialogs.c:1144
 msgid "Full Width"
-msgstr "最大幅にする"
+msgstr "最大の横幅にする"
 
 #: ../panel/panel-dialogs.c:912 ../panel/panel-dialogs.c:1148
-#, fuzzy
 msgid "Normal Height"
-msgstr "通常幅にする"
+msgstr "通常の縦幅にする"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1149
-#, fuzzy
 msgid "Full Height"
-msgstr "最大幅にする"
+msgstr "最大の縦幅にする"
 
 #: ../panel/panel-dialogs.c:921 ../panel/panel-dialogs.c:1158
 msgid "Span Monitors"
@@ -303,7 +294,7 @@ msgstr "モニターの選択"
 
 #. appearance settings
 #. Button Layout
-#: ../panel/panel-dialogs.c:1427 ../plugins/clock/clock-dialog.c:481
+#: ../panel/panel-dialogs.c:1427 ../plugins/clock/clock-dialog.c:480
 #: ../plugins/tasklist/tasklist-dialogs.c:183
 #: ../plugins/windowlist/windowlist-dialog.c:190
 msgid "Appearance"
@@ -324,13 +315,12 @@ msgid "Make active panel opaque"
 msgstr "有効なパネルを不透明にする"
 
 #: ../panel/panel-dialogs.c:1509
-#, fuzzy
 msgid "Popup position:"
-msgstr "位置"
+msgstr "ポップアップ位置:"
 
 #: ../panel/panel-dialogs.c:1519
 msgid "Automatic"
-msgstr ""
+msgstr "自動"
 
 #: ../panel/panel-dialogs.c:1563 ../panel/panel-dialogs.c:1599
 #: ../panel/panel-dialogs.c:1623
@@ -368,62 +358,59 @@ msgstr "アクションのタイプを選択してください"
 msgid "Quit + Lock screen"
 msgstr "終了して画面をロック"
 
-#: ../plugins/clock/clock-dialog.c:346
+#: ../plugins/clock/clock-dialog.c:345
 msgid "Custom"
-msgstr ""
+msgstr "カスタム"
 
-#: ../plugins/clock/clock-dialog.c:400
-#, fuzzy
+#: ../plugins/clock/clock-dialog.c:399
 msgid "Display _seconds"
-msgstr "秒を表示する"
+msgstr "秒を表示する(_S)"
 
-#: ../plugins/clock/clock-dialog.c:409
+#: ../plugins/clock/clock-dialog.c:408
 msgid "Use 24-_hour clock"
 msgstr "24時間制にする(_H)"
 
-#: ../plugins/clock/clock-dialog.c:415
-#, fuzzy
+#: ../plugins/clock/clock-dialog.c:414
 msgid "Sho_w AM/PM"
-msgstr "AM/PMを表示する"
+msgstr "AM/PMを表示する(_W)"
 
-#: ../plugins/clock/clock-dialog.c:424
+#: ../plugins/clock/clock-dialog.c:423
 msgid "True _binary clock"
-msgstr ""
+msgstr "二進表示にする(_B)"
 
 #. create dialog
-#: ../plugins/clock/clock-dialog.c:466
+#: ../plugins/clock/clock-dialog.c:465
 #: ../plugins/clock/clock.desktop.in.in.h:1
 msgid "Clock"
 msgstr "時計"
 
-#: ../plugins/clock/clock-dialog.c:491
+#: ../plugins/clock/clock-dialog.c:490
 msgid "Analog"
 msgstr "アナログ"
 
-#: ../plugins/clock/clock-dialog.c:492
+#: ../plugins/clock/clock-dialog.c:491
 msgid "Binary"
-msgstr ""
+msgstr "バイナリー"
 
-#: ../plugins/clock/clock-dialog.c:493
+#: ../plugins/clock/clock-dialog.c:492
 msgid "Digital"
 msgstr "デジタル"
 
-#: ../plugins/clock/clock-dialog.c:494
-#, fuzzy
+#: ../plugins/clock/clock-dialog.c:493
 msgid "LCD"
-msgstr "ダイオード"
+msgstr "LCD"
 
-#: ../plugins/clock/clock-dialog.c:499 ../plugins/systray/systray.c:402
+#: ../plugins/clock/clock-dialog.c:498 ../plugins/systray/systray.c:402
 msgid "Show _frame"
 msgstr "枠を表示する(_F)"
 
 #. tooltip settings
-#: ../plugins/clock/clock-dialog.c:506
+#: ../plugins/clock/clock-dialog.c:505
 msgid "Tooltip Format"
-msgstr ""
+msgstr "ツールチップの形式"
 
 #. clock settings
-#: ../plugins/clock/clock-dialog.c:532
+#: ../plugins/clock/clock-dialog.c:531
 msgid "Clock Options"
 msgstr "時計のオプション"
 
@@ -437,9 +424,8 @@ msgid "Only show minimized applications"
 msgstr "最小化したアプリのみ表示する"
 
 #: ../plugins/iconbox/iconbox.c:931
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "全ワークスペースのウィンドウを表示する(_W)"
+msgstr "全ワークスペースのアプリを表示する"
 
 #: ../plugins/iconbox/iconbox.c:939 ../plugins/tasklist/tasklist-dialogs.c:202
 msgid "Use all available space"
@@ -452,81 +438,75 @@ msgid "New Item"
 msgstr "新しいアイテム"
 
 #: ../plugins/launcher/launcher-exec.c:515
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch \"%s\""
 msgstr "「%s」を実行できませんでした"
 
 #: ../plugins/launcher/launcher-dialog.c:580
 msgid "No icon"
-msgstr ""
+msgstr "アイコンはありません"
 
 #: ../plugins/launcher/launcher-dialog.c:600
-#, fuzzy
 msgid "Select a Directory"
-msgstr "モニターの選択"
+msgstr "フォルダを選択してください"
 
 #: ../plugins/launcher/launcher-dialog.c:644
-#, fuzzy
 msgid "Select an Application"
-msgstr "アクションのタイプを選択してください"
+msgstr "アプリを選択してください"
 
 #: ../plugins/launcher/launcher-dialog.c:654
 msgid "All Files"
-msgstr ""
+msgstr "全てのファイル"
 
 #: ../plugins/launcher/launcher-dialog.c:659
 msgid "Executable Files"
-msgstr ""
+msgstr "実行可能なファイル"
 
 #: ../plugins/launcher/launcher-dialog.c:674
 msgid "Perl Scripts"
-msgstr ""
+msgstr "Perlスクリプト"
 
 #: ../plugins/launcher/launcher-dialog.c:680
 msgid "Python Scripts"
-msgstr ""
+msgstr "Pythonスクリプト"
 
 #: ../plugins/launcher/launcher-dialog.c:686
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "Tubyスクリプト"
 
 #: ../plugins/launcher/launcher-dialog.c:692
 msgid "Shell Scripts"
-msgstr ""
+msgstr "シェルスクリプト"
 
 #: ../plugins/launcher/launcher-dialog.c:763
 msgid "Unknown"
-msgstr ""
+msgstr "不明"
 
 #. allocate the chooser dialog
 #: ../plugins/launcher/launcher-dialog.c:766
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr ""
+msgstr "「%s」のアイコンを選択してください"
 
 #: ../plugins/launcher/launcher-dialog.c:1104
-#, fuzzy
 msgid "_Name"
-msgstr "名前"
+msgstr "名前(_N)"
 
 #: ../plugins/launcher/launcher-dialog.c:1122
-#, fuzzy
 msgid "_Description"
-msgstr "説明"
+msgstr "説明(_D)"
 
 #: ../plugins/launcher/launcher-dialog.c:1141
-#, fuzzy
 msgid "_Icon"
-msgstr "アイコン箱"
+msgstr "アイコン(_I)"
 
 #: ../plugins/launcher/launcher-dialog.c:1159
-#, fuzzy
 msgid "Co_mmand"
-msgstr "コマンド"
+msgstr "コマンド(_M)"
 
 #: ../plugins/launcher/launcher-dialog.c:1186
 msgid "_Working Directory"
-msgstr ""
+msgstr "作業フォルダ(_W)"
 
 #: ../plugins/launcher/launcher-dialog.c:1218
 msgid "Run in _terminal"
@@ -555,39 +535,37 @@ msgstr "列数:"
 
 #: ../plugins/pager/pager.c:397
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "マウスホイールを使用してワークスペースを切り替える"
 
-#: ../plugins/separator/separator.c:397
+#: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
 msgid "Separator or Spacing"
 msgstr "セパレーターまたはスペース"
 
-#: ../plugins/separator/separator.c:418
-#, fuzzy
+#: ../plugins/separator/separator.c:430
 msgid "Separator Style"
-msgstr "セパレーターまたはスペース"
+msgstr "セパレーターのスタイル"
 
 #. space
-#: ../plugins/separator/separator.c:425
+#: ../plugins/separator/separator.c:437
 msgid "_Empty Space"
-msgstr ""
+msgstr "空のスペース(_E)"
 
-#: ../plugins/separator/separator.c:434
+#: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
-msgstr ""
+msgstr "拡張する空のスペース(_E)"
 
-#: ../plugins/separator/separator.c:443
+#: ../plugins/separator/separator.c:455
 msgid "_Line"
-msgstr ""
+msgstr "線(_L)"
 
-#: ../plugins/separator/separator.c:452
-#, fuzzy
+#: ../plugins/separator/separator.c:464
 msgid "_Handle"
-msgstr "取っ手:"
+msgstr "把手(_H)"
 
-#: ../plugins/separator/separator.c:461
+#: ../plugins/separator/separator.c:473
 msgid "_Dots"
-msgstr ""
+msgstr "点(_D)"
 
 #: ../plugins/showdesktop/showdesktop.c:32
 msgid "Restore hidden windows"
@@ -623,12 +601,11 @@ msgstr "最小幅:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:209
 msgid "Use flat buttons"
-msgstr ""
+msgstr "ボタンの枠を表示しない"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:215
-#, fuzzy
 msgid "Show handle"
-msgstr "枠を表示する(_F)"
+msgstr "把手を表示する"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:227
 msgid "Show tasks from _all workspaces"
@@ -735,7 +712,7 @@ msgstr "ワークスペースアクションを表示する(_K)"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
-msgstr ""
+msgstr "'xfce4-panel -c' を実行できません"
 
 #: ../mcs-plugin/plugin.c:57
 msgid "Panel"
@@ -796,160 +773,3 @@ msgstr "利用可能なウィンドウのリストを表示します。"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 パネルマネージャー"
-
-#~ msgid "%A %d %B %Y"
-#~ msgstr "%Y %B %d %A"
-
-#~ msgid "_Draw Separator"
-#~ msgstr "セパレーターを描画する(_D)"
-
-#~ msgid "_Expand"
-#~ msgstr "拡げる(_E)"
-
-#~ msgid ""
-#~ "\n"
-#~ " Xfce Panel %s\n"
-#~ "\n"
-#~ " Part of the Xfce Desktop Environment\n"
-#~ " http://www.xfce.org\n"
-#~ "\n"
-#~ " Licensed under the GNU GPL.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "\n"
-#~ " Xfce パネル %s\n"
-#~ "\n"
-#~ " Xfce デスクトップ環境 http://www.xfce.org\n"
-#~ " の一部です\n"
-#~ "\n"
-#~ " GNU GPL の条件下にリリースされています。\n"
-#~ "\n"
-
-#~ msgid ""
-#~ " Usage: %s [OPTIONS]\n"
-#~ "\n"
-#~ msgstr ""
-#~ " 使用法: %s [オプション]\n"
-#~ "\n"
-
-#~ msgid ""
-#~ " OPTIONS\n"
-#~ " -h, --help      Show this message and exit\n"
-#~ " -v, --version   Show this message and exit\n"
-#~ " -c, --customize Show configuration dialog\n"
-#~ " -s, --save      Save configuration\n"
-#~ " -r, --restart   Restart panels\n"
-#~ " -q, --quit      End the session\n"
-#~ " -x, --exit      Close all panels and end the program\n"
-#~ " -a, --add       Add new items\n"
-#~ "\n"
-#~ msgstr ""
-#~ " オプション\n"
-#~ " -h, --help      このメッセージを表示して終了します\n"
-#~ " -v, --version   このメッセージを表示して終了します\n"
-#~ " -c, --customize 設定ダイアログを表示します\n"
-#~ " -s, --save      パネルの設定を保存します\n"
-#~ " -r, --restart   パネルを再起動します\n"
-#~ " -q, --quit      このセッションを終了します\n"
-#~ " -x, --exit      全てのパネルを閉じてこのプログラムを終了します\n"
-#~ " -a, --add       新しいアイテムを追加します\n"
-#~ "\n"
-
-#~ msgid "Error in command \"%s\""
-#~ msgstr "コマンド「%s」でエラーが発生しました"
-
-#~ msgid "This item has not yet been configured"
-#~ msgstr "このアイテムはまだ設定されていません"
-
-#~ msgid "Default"
-#~ msgstr "標準"
-
-#~ msgid "File management"
-#~ msgstr "ファイル管理"
-
-#~ msgid "Utilities"
-#~ msgstr "ユーティリティ"
-
-#~ msgid "Games"
-#~ msgstr "ゲーム"
-
-#~ msgid "Help browser"
-#~ msgstr "ヘルプブラウザー"
-
-#~ msgid "Multimedia"
-#~ msgstr "マルチメディア"
-
-#~ msgid "Network"
-#~ msgstr "ネットワーク"
-
-#~ msgid "Graphics"
-#~ msgstr "グラフィックス"
-
-#~ msgid "Printer"
-#~ msgstr "プリンター"
-
-#~ msgid "Productivity"
-#~ msgstr "プロダクト"
-
-#~ msgid "Office"
-#~ msgstr "オフィス"
-
-#~ msgid "Sound"
-#~ msgstr "サウンド"
-
-#~ msgid "Terminal"
-#~ msgstr "ターミナル"
-
-#~ msgid "Development"
-#~ msgstr "開発"
-
-#~ msgid "Select image file"
-#~ msgstr "画像ファイルを選択してください"
-
-#~ msgid "Select command"
-#~ msgstr "コマンドを選択してください"
-
-#~ msgid "Other..."
-#~ msgstr "その他..."
-
-#~ msgid ""
-#~ "The first item in the list is shown on the panel. Additional items will "
-#~ "appear in a menu."
-#~ msgstr ""
-#~ "このリストの先頭に来るアイテムはパネルで表示されます。\n"
-#~ "追加したアイテムはメニューに表示されます。"
-
-# FIXME: wtf
-#~ msgid ""
-#~ "Failed to run 0launch:\n"
-#~ "%s\n"
-#~ "\n"
-#~ "For help using Zero Install, see http://0install.net"
-#~ msgstr ""
-#~ "0launch の実行に失敗しました:\n"
-#~ "%s\n"
-#~ "\n"
-#~ "Zero Install に関するヘルプは\n"
-#~ "http://0install.net を御覧ください"
-
-# FIXME: wtf
-#~ msgid ""
-#~ "The Zero Install GUI has finished, but the launcher dialog has "
-#~ "disappeared in the meantime. Not adding launcher (but any files "
-#~ "downloaded have not been lost)."
-#~ msgstr ""
-#~ "Zero Install の GUI が終了していますが、その間ランチャーダイアログが表示さ"
-#~ "れていません。ランチャーを追加しないでください (ダウンロードしたファイルが"
-#~ "失われることはありません)。"
-
-#~ msgid "Select file"
-#~ msgstr "ファイルを選択してください"
-
-#~ msgid "Test Plugin"
-#~ msgstr "テストプラグイン"
-
-#~ msgid "This plugin has no purpose"
-#~ msgstr "このプログラムはテスト用です。"
-
-#~ msgid "Size"
-#~ msgstr "大きさ"
