--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-15  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ka.po: Georgian translation updated
+	by Dimitri Gogelia <delphi.knight@gmail.com>
+
 2007-06-16  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nl.po: Updated the translation
