Error in the Georgian panel translation fixed. I should have verified before committing\!
(Old svn revision: 25919)

--- a/po/ka.po
+++ b/po/ka.po
@@ -673,7 +673,7 @@ msgstr "%d სამუშაო არეს წაშლა"
 #: ../plugins/windowlist/windowlist.c:645
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr "%d სამუშაო არეს წაშლა"
+msgstr "%s სამუშაო არეს წაშლა"
 
 #. Windowlist Settings
 #: ../plugins/windowlist/windowlist-dialog.c:121
