Fix window manager hints reporting width 1 pixel too wide (bug #3402).
(Old svn revision: 25939)

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 4.5.x
 =====
+- Fix window manager hints reporting width 1 pixel too wide (bug #3402).
+  (Jasper)
 - Make itembar not care about expanded items when panel is not full width.
   (Jasper)
 - Separator can have different styles: space, expanded space, line (default),
