--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ NEWS for xfce4-panel
 
 4.4.2
 =====
+- Fix window manager hints reporting width 1 pixel too wide (bug #3402).
 - Improve MCS plugin code. (Nick)
 - Fix expansion of items a non-full-width panel. (Jasper)
 - Make sure tooltips are set for more than 1 clock instance (bug #3109).
