* config/launcher-7.rc.in: Use exo-open instead of Terminal (Bug #3384).
(Old svn revision: 25974)

--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,9 @@ NEWS for xfce4-panel
   digital clock is also set in the default layout to minimize the amount
   of screen updates. (Nick)
 - Fix possible buffer overflow in launcher tooltips (bug #3324). (Jasper)
+- Use 'exo-open --launch TerminalEmulator' in the default configuration
+  (Bug #3384). (Nick)
+-
 
 
 4.4.1
