Updating Arabic translations
(Old svn revision: 25984)

--- a/po/ar.po
+++ b/po/ar.po
@@ -806,101 +806,101 @@ msgid "Xfce 4 Panel Manager"
 msgstr "مدير أشرطة اكسفس 4"
 
 #, fuzzy
-#~ msgid "%A %d %B %Y"
-#~ msgstr "%A, %d %B %Y"
+msgid ""
+"\n"
+" Xfce Panel %s\n"
+"\n"
+" Part of the Xfce Desktop Environment\n"
+" http://www.xfce.org\n"
+"\n"
+" Licensed under the GNU GPL.\n"
+"\n"
+msgstr ""
+"\n"
+"The Xfce Panel\n"
+"نسخة %s\n"
+"\n"
+"جزء من الواجهة الرسومية Xfce\n"
+"http://www.xfce.org\n"
+"\n"
+"Licensed under the GNU GPL.\n"
+"\n"
+
+msgid ""
+" Usage: %s [OPTIONS]\n"
+"\n"
+msgstr ""
+"الاستخدام: %s [OPTIONS]\n"
+"\n"
 
 #, fuzzy
-#~ msgid "_Draw Separator"
-#~ msgstr "فاصل"
+msgid "%A %d %B %Y"
+msgstr "%A, %d %B %Y"
 
-#~ msgid "_Expand"
-#~ msgstr "_افرد"
-
-#, fuzzy
-#~ msgid ""
-#~ "\n"
-#~ " Xfce Panel %s\n"
-#~ "\n"
-#~ " Part of the Xfce Desktop Environment\n"
-#~ " http://www.xfce.org\n"
-#~ "\n"
-#~ " Licensed under the GNU GPL.\n"
-#~ "\n"
-#~ msgstr ""
-#~ "\n"
-#~ "The Xfce Panel\n"
-#~ "نسخة %s\n"
-#~ "\n"
-#~ "جزء من الواجهة الرسومية Xfce\n"
-#~ "http://www.xfce.org\n"
-#~ "\n"
-#~ "Licensed under the GNU GPL.\n"
-#~ "\n"
-
-#~ msgid ""
-#~ " Usage: %s [OPTIONS]\n"
-#~ "\n"
-#~ msgstr ""
-#~ "الاستخدام: %s [OPTIONS]\n"
-#~ "\n"
-
-#~ msgid "Error in command \"%s\""
-#~ msgstr "خطأ في الأمر \"%s\""
+msgid "Error in command \"%s\""
+msgstr "خطأ في الأمر \"%s\""
 
 #, fuzzy
-#~ msgid "This item has not yet been configured"
-#~ msgstr "ﻻ يحوي على خيرات أعداد"
+msgid "This item has not yet been configured"
+msgstr "ﻻ يحوي على خيرات أعداد"
 
-#~ msgid "Default"
-#~ msgstr "تلقائي"
+msgid "Default"
+msgstr "تلقائي"
 
-#~ msgid "File management"
-#~ msgstr "متصفح الملفات"
+msgid "File management"
+msgstr "متصفح الملفات"
 
-#~ msgid "Utilities"
-#~ msgstr "وسائل"
+msgid "Utilities"
+msgstr "وسائل"
 
-#~ msgid "Games"
-#~ msgstr "ألعاب"
+msgid "Games"
+msgstr "ألعاب"
 
-#~ msgid "Help browser"
-#~ msgstr "متصفح المساعدة"
+msgid "Help browser"
+msgstr "متصفح المساعدة"
 
-#~ msgid "Multimedia"
-#~ msgstr "وسائط متعددة"
+msgid "Multimedia"
+msgstr "وسائط متعددة"
 
-#~ msgid "Network"
-#~ msgstr "شبكة"
+msgid "Network"
+msgstr "شبكة"
 
-#~ msgid "Graphics"
-#~ msgstr "رسومية"
+msgid "Graphics"
+msgstr "رسومية"
 
-#~ msgid "Printer"
-#~ msgstr "طابعة"
+msgid "Printer"
+msgstr "طابعة"
 
-#~ msgid "Productivity"
-#~ msgstr "إنتاجية"
+msgid "Productivity"
+msgstr "إنتاجية"
 
-#~ msgid "Office"
-#~ msgstr "المكتب"
+msgid "Office"
+msgstr "المكتب"
 
-#~ msgid "Sound"
-#~ msgstr "صوت"
+msgid "Sound"
+msgstr "صوت"
 
-#~ msgid "Terminal"
-#~ msgstr "سطر اﻷوامر"
+msgid "Terminal"
+msgstr "سطر اﻷوامر"
 
-#~ msgid "Development"
-#~ msgstr "التطوير"
+msgid "Development"
+msgstr "التطوير"
 
-#~ msgid "Select image file"
-#~ msgstr "اختر ملف صورة"
+msgid "Select image file"
+msgstr "اختر ملف صورة"
 
-#~ msgid "Select command"
-#~ msgstr "إختر أمر"
+msgid "Select command"
+msgstr "إختر أمر"
 
-#~ msgid "Other..."
-#~ msgstr "آخر"
+msgid "Other..."
+msgstr "آخر"
 
-#~ msgid "Select file"
-#~ msgstr "إختر ملف"
+msgid "Select file"
+msgstr "إختر ملف"
+
+#, fuzzy
+msgid "_Draw Separator"
+msgstr "فاصل"
+
+msgid "_Expand"
+msgstr "_افرد"
