Update European Portuguese for xfce4-panel/trunk.
(Old svn revision: 25997)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,14 @@
+2007-08-22  Mike Massonnet <mmassonnet@xfce.org>
+
+	* pt_PT.po: Updated European Portuguese translations.
+
 2007-07-14  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
 
 2007-07-13  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update
+	* eu.po: Basque translation update
 
 2007-06-29  Maximilian Schleiss <maximilian@xfce.org>
 
