--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-24  Jean-François Wauthy <pollux@xfce.org>
+
+	* sk.po: Updated Slovak translations
+
 2007-07-15  Maximilian Schleiss <maximilian@xfce.org>
 
 	* ka.po: Georgian translation updated
