* po/pt_PT.po: European Portuguese update
(Old svn revision: 26011)

--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-06 21:54+0200\n"
-"PO-Revision-Date: 2007-07-08 22:17+0100\n"
+"PO-Revision-Date: 2007-08-24 12:06+0100\n"
 "Last-Translator: Nuno Miguel <nunis@netcabo.pt>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -540,7 +540,7 @@ msgstr "Lançar Programa"
 #: ../plugins/pager/pager.c:336
 #: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
-msgstr "Alternador de Areas de Trabalho"
+msgstr "Alternador de Áreas de Trabalho"
 
 #: ../plugins/pager/pager.c:367
 msgid "Number of rows:"
