--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-25  Mike Massonnet <mmassonnet@xfce.org>
+
+	* pt_PT.po: European Portuguese update
+	by Nuno Miguel <nunis@netcabo.pt>
+
 2007-08-22  Mike Massonnet <mmassonnet@xfce.org>
 
 	* pt_PT.po: Updated European Portuguese translations.
