--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-27 Og Maciel <ogmaciel@gnome.org>
+
+	* pt.BR: Brazilian Portuguese translation updated
+	by Fábio Nogueira <deb-user-ba@ubuntu.com>
+	revised by Og Maciel <ogmaciel@gnome.org>
+
 2007-08-24  Jean-François Wauthy <pollux@xfce.org>
 
 	* sk.po: Updated Slovak translations
