Minor update of Brazilian Portuguese translation by Fábio Nogueira.
(Old svn revision: 26027)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-28 Og Maciel <ogmaciel@gnome.org>
+
+	* pt.BR: Brazilian Portuguese translation updated
+	by Fábio Nogueira <deb-user-ba@ubuntu.com>
+
 2007-08-27 Og Maciel <ogmaciel@gnome.org>
 
 	* pt.BR: Brazilian Portuguese translation updated
