--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 15:28+0200\n"
-"PO-Revision-Date: 2007-08-27 22:26-0500\n"
-"Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
+"PO-Revision-Date: 2007-08-28 11:59-0300\n"
+"Last-Translator: Fábio Nogueira <deb-user-ba@ubuntu.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -418,7 +418,7 @@ msgstr "Mostrar apenas as aplicações minimizadas"
 
 #: ../plugins/iconbox/iconbox.c:935
 msgid "Show applications of all workspaces"
-msgstr "Mostrar os programas de todas os espaços de trabalho"
+msgstr "Mostrar os programas de todos os espaços de trabalho"
 
 #: ../plugins/iconbox/iconbox.c:943
 #: ../plugins/tasklist/tasklist.c:447
@@ -633,7 +633,7 @@ msgstr "Utilizar botões planos"
 
 #: ../plugins/tasklist/tasklist.c:473
 msgid "Show tasks from _all workspaces"
-msgstr "Mostrar taref_as de todos os espaços de trabalho"
+msgstr "Mostrar as taref_as de todos os espaços de trabalho"
 
 #: ../plugins/tasklist/tasklist.c:483
 msgid "Show application _names"
