Update Nordic (nb_NB) translations.
(Old svn revision: 26033)

--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -729,7 +729,7 @@ msgstr "Hva er klokken?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
-msgstr "Vis ikoner for all kjørende programmer"
+msgstr "Vis ikoner for alle kjørende programmer"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -737,7 +737,7 @@ msgstr "Programstarter"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr "Programstarter med valgfi meny"
+msgstr "Programstarter med valgfri undermeny"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
