--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-29  Mike Massonnet <mmassonnet@xfce.org>
+
+	* nb_NO.po: Update translations
+	by Terje Uriansrud <ter@operamail.com>
+
 2007-08-28 Og Maciel <ogmaciel@gnome.org>
 
 	* pt.BR: Brazilian Portuguese translation updated
