* Fix crash in Gtk 2.11. The combobox returns -1 when   removing the panel, which results in a wrong pointer   and ends in a segfault.
(Old svn revision: 26046)

--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ NEWS for xfce4-panel
 - Fix possible buffer overflow in launcher tooltips (bug #3324). (Jasper)
 - Use 'exo-open --launch TerminalEmulator' in the default configuration
   (Bug #3384). (Nick)
--
+- Fix crash when removing a panel in Gtk+ 2.11.x (Nick)
 
 
 4.4.1
