xfce4-panel basque translation update
(Old svn revision: 26071)

--- a/po/eu.po
+++ b/po/eu.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-10 14:03+0200\n"
-"PO-Revision-Date: 2007-07-13 13:19+0200\n"
+"PO-Revision-Date: 2007-09-12 21:52+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <Librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
@@ -63,8 +63,7 @@ msgid "Remove \"%s\"?"
 msgstr "\"%s\" Ezabatu?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:636
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 "Elementu hau paneletik ezabatua izango da eta bere konfigurazioa galdu "
 "egingo da."
@@ -527,18 +526,16 @@ msgid "Program Launcher"
 msgstr "Abiarazleari menua gehitu"
 
 #: ../plugins/launcher/launcher-dialog.c:1543
-#, fuzzy
 msgid "A_rrow:"
-msgstr "Ge_zi botoia"
+msgstr "Ge_zia:"
 
 #: ../plugins/launcher/launcher-dialog.c:1549
 msgid "Default"
-msgstr ""
+msgstr "Lehenetsia"
 
 #: ../plugins/launcher/launcher-dialog.c:1554
-#, fuzzy
 msgid "Inside Button"
-msgstr "_Ikono Botoia"
+msgstr "Barne Botoia"
 
 #: ../plugins/pager/pager.c:336 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -608,14 +605,13 @@ msgstr "Pantaila honetan sistema barra bat martxan dago"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:287
-#, fuzzy
 msgid "Hidden Applications"
-msgstr "Aplikazio bat Hautatu:"
+msgstr "Ezkutatutako Aplikazioak"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
 msgid "Failed to acquire manager selection for screen %d"
-msgstr ""
+msgstr "Huts %d pantailaren kudeatzaile hautapena eskuratzerakoan"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:157
 #: ../plugins/tasklist/tasklist-dialogs.c:224
@@ -802,5 +798,3 @@ msgstr "Leiho erabilgarri zerrenda bistarazi"
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 Panel Kudeatzailea:"
 
-#~ msgid "Unable to register system tray: %s"
-#~ msgstr "Ezinezkoa sistema barra erregistratzea: %s"
