--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-10  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update
+
 2007-09-10  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
 	* be.po: Updated Belarusian translation
